--- a/web_app/templates/stocks_form.html
+++ b/web_app/templates/stocks_form.html
@@ -18,6 +18,7 @@
             <option value="high">High</option>
             <option value="medium">Medium</option>
             <option value="low">Low</option>
+            <option value="zero">Zero</option>
         </select>
         <br>
 
