--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -45,6 +45,7 @@
         ('/unemployment/dashboard', 'unemployment_dashboard', 'Unemployment Dashboard'),
         ('/stocks/form', 'stocks_form', 'Stocks Form'),
         ('/products', 'products', 'Products'),
+        ('/drinks', 'drinks', 'Drinks'),
     ] -%}
     {% set active_page = active_page|default('home') -%}
     <nav class="navbar navbar-expand-lg navbar-dark bg-info">
